got webpack working and started writting some js functions

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "twitter-clone",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
@@ -13,5 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "webpack-cli": "^5.0.1"
   }
 }
