--- a/package.json
+++ b/package.json
@@ -2,19 +2,29 @@
   "name": "twitter-clone",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --watch",
     "build": "webpack"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tptheautis/Twitter-Clone.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/tptheautis/Twitter-Clone/issues"
+  },
+  "homepage": "https://github.com/tptheautis/Twitter-Clone#readme",
+  "devDependencies": {
+    "html-webpack-plugin": "^5.5.1",
+    "html-webpack-plugin-remove": "^0.1.0",
+    "webpack": "^5.81.0",
+    "webpack-cli": "^5.0.2"
+  },
   "dependencies": {
     "lodash": "^4.17.21"
-  },
-  "devDependencies": {
-    "webpack-cli": "^5.0.1"
   }
 }
